h2 alignment fix

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -45,8 +45,8 @@ aside img {
 }
 aside h2 {
     position: absolute;
-    top: 47px;
-    left: 150px;
+    top: 20px;
+    left: 125px;
 }
 footer {
     margin-top: 1em;
